Створено за допомогою Colab

--- a/hw_1_3_3_Comprehensions.ipynb
+++ b/hw_1_3_3_Comprehensions.ipynb
@@ -104,17 +104,17 @@
     {
       "cell_type": "code",
       "source": [
-        "numbers_squared = [num * 2 for num in numbers]\n",
-        "numbers_squared"
+        "numbers_squared_lh = [num * 2 for num in numbers]\n",
+        "numbers_squared_lh"
       ],
       "metadata": {
         "id": "fsKlUM9x7T7n",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "939852a3-7b18-4259-9c9f-8a1676ac3c84"
+        "outputId": "7fee4aa7-e4c5-426f-8fba-fd87207ac94e"
       },
-      "execution_count": 8,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 66
         }
       ]
     },
@@ -259,10 +259,10 @@
     {
       "cell_type": "code",
       "source": [
-        "n_repeats = {}\n",
-        "unique_list = list(set(long))\n",
+        "unique_el = list(set(long))\n",
         "\n",
-        "for num_s in unique_list:\n",
+        "n_repeats = {}\n",
+        "for num_s in unique_el:\n",
         "  n_repeats[num_s] = long.count(num_s)\n",
         "print(n_repeats)"
       ],
@@ -271,9 +271,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f6edb325-67ff-4578-9ad7-f54b444b6277"
+        "outputId": "318e4c5f-739b-4cf4-d055-d353ada4724e"
       },
-      "execution_count": 63,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +309,7 @@
     {
       "cell_type": "code",
       "source": [
-        "n_repeats_dh = {num_s:long.count(num_s) for num_s in unique_list}\n",
+        "n_repeats_dh = {num_s:long.count(num_s) for num_s in unique_el}\n",
         "print(n_repeats_dh)"
       ],
       "metadata": {
@@ -317,9 +317,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a8a1d169-50af-4cb8-931d-cfb76768c42f"
+        "outputId": "6ea5c8ae-341b-455c-8301-3ca8bb978319"
       },
-      "execution_count": 56,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,17 +342,17 @@
     {
       "cell_type": "code",
       "source": [
-        "unique_list = list(set(long))\n",
-        "sorted(unique_list)[:3]\n"
+        "unique_el = list(set(long))\n",
+        "sorted(unique_el)[:3]\n"
       ],
       "metadata": {
         "id": "NG9PvlnK8a2Q",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "df344b49-519d-4cd1-bf9c-92c309c798d9"
+        "outputId": "a398e7f7-06bb-40f8-e708-18101445749b"
       },
-      "execution_count": 65,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 70
         }
       ]
     },
