Створено за допомогою Colab

--- a/hw_3_2_Основи_роботи_з_даними_у_Pandas.ipynb
+++ b/hw_3_2_Основи_роботи_з_даними_у_Pandas.ipynb
@@ -45,7 +45,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "__KrZsMqCv6y",
-        "outputId": "f9c7fe60-78b0-4b64-b61f-c76db8b324fb"
+        "outputId": "44ea2259-637a-40e2-9ece-47acb708af86"
       },
       "execution_count": 2,
       "outputs": [
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "xBI9gJMK8qnl"
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -2043,73 +2043,27 @@
       "cell_type": "code",
       "source": [
         "city_count = df.City.value_counts()\n",
-        "display(city_count)"
+        "print(city_count)"
       ],
       "metadata": {
         "id": "StVtKfWY-13y",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 209
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "44c79d16-a73b-44ff-e030-0e622969d836"
+        "outputId": "56ac45ac-0fb3-44b4-d953-1a2c9147bc95"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "City\n",
-              "Yangon       340\n",
-              "Mandalay     332\n",
-              "Naypyitaw    328\n",
-              "Name: count, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>City</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Yangon</th>\n",
-              "      <td>340</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Mandalay</th>\n",
-              "      <td>332</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Naypyitaw</th>\n",
-              "      <td>328</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {}
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "City\n",
+            "Yangon       340\n",
+            "Mandalay     332\n",
+            "Naypyitaw    328\n",
+            "Name: count, dtype: int64\n"
+          ]
         }
       ]
     },
@@ -2143,74 +2097,27 @@
     {
       "cell_type": "code",
       "source": [
-        "city_count/city_count.sum()"
+        "print(city_count/city_count.sum())\n"
       ],
       "metadata": {
         "id": "_PBLxP7B_LdF",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 209
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef3462d3-288e-48d7-e517-259703851641"
+        "outputId": "7341e489-47f9-412b-8ac2-196449e27724"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "City\n",
-              "Yangon       0.340\n",
-              "Mandalay     0.332\n",
-              "Naypyitaw    0.328\n",
-              "Name: count, dtype: float64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>City</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Yangon</th>\n",
-              "      <td>0.340</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Mandalay</th>\n",
-              "      <td>0.332</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Naypyitaw</th>\n",
-              "      <td>0.328</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> float64</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "City\n",
+            "Yangon       0.340\n",
+            "Mandalay     0.332\n",
+            "Naypyitaw    0.328\n",
+            "Name: count, dtype: float64\n"
+          ]
         }
       ]
     },
@@ -2276,17 +2183,6 @@
           "execution_count": 31
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# в м. Mandalay середній дохід з одного інвойса більший"
-      ],
-      "metadata": {
-        "id": "wDhDWw2dASIU"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2368,15 +2264,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*Висновок: у всіх інвойсів однакова маржа*"
-      ],
-      "metadata": {
-        "id": "XAXyEpOwLBV4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Очікуваний результат: відповідь щодо маржі в усіх інвойсах на основі отриманих результатів"
       ],
       "metadata": {
@@ -2408,67 +2295,6 @@
       },
       "execution_count": 45,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "print(inv_counts_Yangon/inv_counts_Yangon.sum())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bijakDTQNahA",
-        "outputId": "5443e564-f208-4114-b355-dbc1acc6bb44"
-      },
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Product line\n",
-            "Home and lifestyle        0.191176\n",
-            "Electronic accessories    0.176471\n",
-            "Sports and travel         0.173529\n",
-            "Food and beverages        0.170588\n",
-            "Fashion accessories       0.150000\n",
-            "Health and beauty         0.138235\n",
-            "Name: count, dtype: float64\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(inv_counts_Mandalay/inv_counts_Mandalay.sum())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yEYV-XYXNXIh",
-        "outputId": "e29af1a5-694e-45b0-e63c-9a0b7b8eb61c"
-      },
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Product line\n",
-            "Fashion accessories       0.186747\n",
-            "Sports and travel         0.186747\n",
-            "Electronic accessories    0.165663\n",
-            "Health and beauty         0.159639\n",
-            "Food and beverages        0.150602\n",
-            "Home and lifestyle        0.150602\n",
-            "Name: count, dtype: float64\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
